<?xml version="1.0"?>
<package format="2">
  <name>movel_flexbe</name>
  <version>0.0.0</version>
  <description>The movel_flexbe package</description>

  <maintainer email="dionesius@movel.ai">dionesius</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>flexbe_behavior_engine</depend>

  <export>
  </export>
</package>
