<package>
  <name>movel_flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     movel_flexbe_behaviors contains behaviors implemented by Movel AI.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <export>
    <flexbe_behaviors />
  </export>

</package>
